@@ -13,7 +13,6 @@
 #include	"dat.h"
 #include	"fns.h"
 #include	"error.h"
-#include <fpuctl.h>
 
 #include <semaphore.h>
 
